force-app/main/default/objects/Employment_Details__c/Employment_Details__c.object-meta.xml
<CustomObject>
    <label>Employment Details</label>
    <nameField>
        <displayFormat>EMP-{00000}</displayFormat>
        <label>Employment Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>