force-app/main/default/objects/Employment_Details__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment Details</relationshipLabel>
    <relationshipName>Employment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>