force-app/main/default/objects/Employment_Details__c/fields/End_Year_Present__c.field-meta.xml
<CustomField>
    <fullName>End_Year_Present__c</fullName>
    <label>End Year_Present</label>
    <length>255</length>
    <type>Text</type>
</CustomField>