force-app/main/default/objects/Employment_Details__c/fields/I_am_currently_working_here__c.field-meta.xml
<CustomField>
    <fullName>I_am_currently_working_here__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I am currently working here</label>
    <type>Checkbox</type>
</CustomField>