force-app/main/default/objects/Employment_Details__c/fields/Reporting_To__c.field-meta.xml
<CustomField>
    <fullName>Reporting_To__c</fullName>
    <label>Reporting To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>