force-app/main/default/objects/Employment_Details__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Reviewer__c</referenceTo>
    <relationshipLabel>Employment Details</relationshipLabel>
    <relationshipName>Employment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>