force-app/main/default/objects/Employment_Details__c/fields/Roles_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Roles_Responsibilities__c</fullName>
    <label>Roles &amp; Responsibilities</label>
    <type>TextArea</type>
</CustomField>