force-app/main/default/objects/Employment_Details__c/fields/Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Year__c</fullName>
    <label>Start Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>