force-app/main/default/objects/Employment_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Applicant_Proposal_Association__c</columns>
    <columns>Start_Year__c</columns>
    <columns>End_Year_Present__c</columns>
    <columns>Organisation__c</columns>
    <columns>Position__c</columns>
    <columns>Reporting_To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>